--- a/packages/proto/index.html
+++ b/packages/proto/index.html
@@ -58,7 +58,7 @@
         
 
         <div class="image-grid">
-            <a href="chest-press.html"><img src="/images/chest-press.webp" alt="Chest press"></a>
+            <a href="/machines/chest-press.html"><img src="/images/chest-press.webp" alt="Chest press"></a>
             <a href="lat-pulldown.html"><img src="/images/lat-pulldown.webp" alt="…"></a>
             <a href="hack-squat.html"><img src="/images/hack-squat.webp" alt="…"></a>
             <a href="glute-bridge.html"><img src="/images/glute-bridge.webp" alt=""></a>
